--- a/views/qr.pug
+++ b/views/qr.pug
@@ -6,6 +6,7 @@ html(lang='en')
     body
     span(style="display:none;", id="qrcode")=qr
     span(style="display:none;", id="clientready")=clientready
+    span(style="display:none;", id="clientauthenticated")=clientauthenticated
     h3 Scan Qr bar-code to connect your Whatsapp, refresh and rescan if error occurs
     div(id="qr-div")
     script(src="/js/qr.js" type="module")
